# sjtu-monitor

./: .env.example  .gitignore  LICENSE  README.md  apppaths.py  backend_entry.py  bootstrap.py  components.json  config.py  course_plus.py  debug_login_page.py  gui.py  gui_backend.py  index.html  login.py  monitor.py  notifier.py  package-lock.json  package.json  requirements-build.txt  requirements.txt  secure_store.py  sjtu-backend.spec  swap.py  test_choosed.py  test_data_settings.py  test_drop_reselect.py  test_full_catalog.py  test_gui_logic.py  test_gui_responsive.py  test_zzxk_select_drop.py  timetable.py  tsconfig.json  vitest.config.mjs  zzxk.py
.github/workflows/: ci.yml  release.yml
docs/: microsoft-store.md  privacy-policy.md  winget.md
packaging/: Package.appxmanifest.template  build-msix.ps1
packaging/winget/0.5.1/: SJTU.SJTUMonitor.installer.yaml  SJTU.SJTUMonitor.locale.en-US.yaml  SJTU.SJTUMonitor.yaml
scripts/: check-release-version.ps1  static-dev.mjs  tauri-env.mjs  vite-build.mjs
src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  api.ts  courseLogic.test.ts  courseLogic.ts  demo.ts  main.tsx  styles.css  tauri.d.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  tabs.tsx  tooltip.tsx
src/test/: setup.ts
