[package]
name = "sjtu-monitor-desktop"
version = "0.5.1"
description = "Tauri desktop shell for SJTU Monitor"
authors = ["sj-tu.com"]
edition = "2021"

[lib]
name = "sjtu_monitor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = [] }
